[workspace]
resolver = "2"
members = [
    "crates/seess-core",
    "crates/seess-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SeeSS Contributors"]
license = "MIT"
repository = "https://github.com/your-username/seess"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
