[package]
name = "seess-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for SeeSS core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seess-core = { path = "../seess-core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
