[package]
name = "seess-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for SeeSS core"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seess-core = { path = "../seess-core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
